--- a/Code/jobjett/package.json
+++ b/Code/jobjett/package.json
@@ -15,6 +15,10 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
+    "google-auth-library": "^9.9.0",
+    "node-schedule": "^2.1.1",
+    "nodemailer": "^6.9.13",
+    "nodemailer-smtp-transport": "^2.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
