--- a/Code/jobjett/package.json
+++ b/Code/jobjett/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
+    "formik": "^2.4.6",
     "google-auth-library": "^9.9.0",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.13",
@@ -25,7 +26,8 @@
     "react-icons": "^5.1.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
-    "react-router-hash-link": "^2.4.3"
+    "react-router-hash-link": "^2.4.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
